--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  # Play music files
+  just_audio: ^0.6.12
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
